--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,11 +23,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: Install dependencies
+    - name: Install dependencies # 1) 스크립트에 필요한 dependency 설치
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install python-leetcode 
     - name: Run update.py # 2) update.py 실행
       run: |
         python update.py
