--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,3 +32,5 @@ jobs: # 실제 실행될 내용
     - name: Push changes # 4) 메인에 푸시
       run: |
         git push
+      env: 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
